k0gram.output
Terminals unused in grammar

    RESERVED
    EXCL_WS
    DOUBLE_ARROW
    COLONCOLON
    DOUBLE_SEMICOLON
    HASH
    AT_NO_WS
    AT_POST_WS
    AT_PRE_WS
    AT_BOTH_WS
    QUEST_WS
    QUEST_DOT
    AS_SAFE
    SINGLE_QUOTE
    RETURN_AT
    CONTINUE_AT
    BREAK_AT
    THIS_AT
    SUPER_AT
    FILES
    FIELD
    PROPERTY
    GET
    SET
    RECEIVER
    PARAM
    SETPARAM
    DELEGATE
    PACKAGE
    IMPORT
    INTERFACE
    OBJECT
    TYPEALIAS
    CONSTRUCTOR
    BY
    COMPANION
    INIT
    THIS
    SUPER
    TYPEOF
    WHERE
    TRY
    CATCH
    FINALLY
    THROW
    AS
    IS
    OUT
    DYNAMIC
    PUBLIC
    PRIVATE
    PROTECTED
    INTERNAL
    ENUM
    SEALED
    ANNOTATION
    DATA
    INNER
    TAILREC
    OPERATOR
    INLINE
    INFIX
    EXTERNAL
    SUSPEND
    OVERRIDE
    ABSTRACT
    FINAL
    OPEN
    LATEINIT
    VARARG
    NOINLINE
    CROSSINLINE
    REIFIED
    EXPECT
    ACTUAL
    REAL_LITERAL
    HEX_LITERAL
    BIN_LITERAL
    UNSIGNED_LITERAL
    LONG_LITERAL
    INT
    FLOAT
    BOOLEAN
    CHAR
    STRING
    BYTE
    T_EOF
    EQUALITY_OP
    COMPARISON_OP
    prefixUnaryOp
    LOWER_THAN_ELSE


State 46 conflicts: 1 shift/reduce
State 47 conflicts: 1 shift/reduce
State 51 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce
State 82 conflicts: 1 shift/reduce
State 87 conflicts: 1 shift/reduce
State 116 conflicts: 16 shift/reduce
State 126 conflicts: 2 shift/reduce
State 137 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce
State 139 conflicts: 4 shift/reduce
State 140 conflicts: 4 shift/reduce
State 141 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce
State 143 conflicts: 1 shift/reduce
State 144 conflicts: 2 shift/reduce
State 145 conflicts: 3 shift/reduce
State 155 conflicts: 16 shift/reduce
State 162 conflicts: 1 shift/reduce
State 163 conflicts: 2 shift/reduce
State 164 conflicts: 1 shift/reduce
State 168 conflicts: 2 shift/reduce
State 169 conflicts: 1 shift/reduce
State 173 conflicts: 1 shift/reduce
State 180 conflicts: 2 shift/reduce
State 211 conflicts: 7 shift/reduce
State 217 conflicts: 16 shift/reduce
State 268 conflicts: 4 shift/reduce
State 269 conflicts: 4 shift/reduce
State 271 conflicts: 1 shift/reduce
State 272 conflicts: 1 shift/reduce
State 273 conflicts: 1 shift/reduce
State 281 conflicts: 1 shift/reduce
State 324 conflicts: 1 shift/reduce
State 326 conflicts: 1 shift/reduce
State 350 conflicts: 2 shift/reduce
State 389 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: topLevelObjects

    2 topLevelObjects: topLevelObject
    3                | topLevelObjects topLevelObject

    4 topLevelObject: declaration semis

    5 opt_functionBody: functionBody
    6                 | ε

    7 opt_colon_type: COLON type
    8               | ε

    9 functionDeclaration: FUN opt_typeParameters nullableType DOT simpleIdentifier functionValueParameters opt_colon_type opt_functionBody
   10                    | FUN opt_typeParameters simpleIdentifier functionValueParameters opt_colon_type opt_functionBody

   11 functionValueParameters: LPAREN opt_functionValueParameter RPAREN

   12 functionValueParameter: parameter opt_eq_exp

   13 parameter: simpleIdentifier COLON type

   14 multi_comma_functionParameter: multi_comma_functionParameter COMMA functionValueParameter
   15                              | ε

   16 opt_functionValueParameter: functionValueParameter multi_comma_functionParameter COMMA
   17                           | functionValueParameter multi_comma_functionParameter
   18                           | ε

   19 type: nullableType

   20 functionBody: block
   21             | ASSIGNMENT expression SEMICOLON

   22 block: LCURL statements RCURL

   23 semis: SEMICOLON
   24      | ε

   25 semis_statement: semis_statement semis statement
   26                | ε

   27 optional_statement_sequence: statement semis_statement
   28                            | ε

   29 statements: optional_statement_sequence

   30 statement: declaration semis
   31          | assignment semis
   32          | expression semis
   33          | loopStatement semis

   34 declaration: classDeclaration
   35            | functionDeclaration
   36            | propertyDeclaration

   37 val_var: VAR
   38        | VAL

   39 opt_modifier: CONST

   40 $@1: ε

   41 opt_modifier: $@1

   42 parenthesizedType: LPAREN type RPAREN

   43 multi_dot_simpleUserType: multi_dot_simpleUserType DOT simpleUserType

   44 $@2: ε

   45 multi_dot_simpleUserType: $@2

   46 userType: simpleUserType multi_dot_simpleUserType

   47 simpleUserType: simpleIdentifier typeArguments
   48               | simpleIdentifier

   49 multi_quest: multi_quest QUEST_NO_WS

   50 $@3: ε

   51 multi_quest: $@3

   52 nullableType: typeRef_parenthesizedType multi_quest
   53             | TYPELITERAL multi_quest
   54             | arrayType

   55 arrayType: ARRAYTYPELITERAL typeArguments

   56 typeRef_parenthesizedType: parenthesizedType
   57                          | userType

   58 opt_eq_exp: ASSIGNMENT expression

   59 $@4: ε

   60 opt_eq_exp: $@4

   61 multivariable_variableDeclaration: variableDeclaration
   62                                  | multiVariableDeclaration

   63 propertyDeclaration: opt_modifier val_var opt_typeParameters nullableType DOT multivariable_variableDeclaration opt_eq_exp SEMICOLON
   64                    | opt_modifier val_var opt_typeParameters multivariable_variableDeclaration opt_eq_exp SEMICOLON
   65                    | opt_modifier val_var opt_typeParameters multivariable_variableDeclaration opt_eq_exp

   66 opt_typeParameters: typeParameters
   67                   | ε

   68 opt_comma: COMMA
   69          | ε

   70 typeParameters: LANGLE typeParameter multi_typeParameter opt_comma RANGLE

   71 typeParameter: simpleIdentifier

   72 multi_typeParameter: multi_typeParameter COMMA typeParameter
   73                    | ε

   74 simpleIdentifier: IDENTIFIER

   75 classDeclaration: CONST CLASS simpleIdentifier opt_typeParameters classBody
   76                 | CLASS simpleIdentifier opt_typeParameters classBody

   77 variableDeclaration: type COLON type
   78                    | type

   79 multiVariableDeclaration: LPAREN variableDeclaration multi_comma_variableDeclaration opt_comma RPAREN

   80 multi_comma_variableDeclaration: multi_comma_variableDeclaration COMMA variableDeclaration
   81                                | ε

   82 classBody: LCURL classMembers RCURL

   83 assignmentAndOperator: ADD_ASSIGNMENT
   84                      | SUB_ASSIGNMENT
   85                      | MULT_ASSIGNMENT
   86                      | DIV_ASSIGNMENT
   87                      | MOD_ASSIGNMENT

   88 assignableExpression: prefixUnaryExpression
   89                     | parenthesizedAssignableExpression

   90 multi_unaryPrefix: multi_unaryPrefix prefixUnaryOperator

   91 $@5: ε

   92 multi_unaryPrefix: $@5

   93 prefixUnaryOperator: ADD
   94                    | SUB
   95                    | INCR
   96                    | DECR
   97                    | EXCL_NO_WS EXCL_NO_WS

   98 prefixUnaryExpression: multi_unaryPrefix postfixUnaryExpression

   99 parenthesizedAssignableExpression: LPAREN assignableExpression RPAREN

  100 assignment: directly_assign expression

  101 directly_assign: directlyAssignableExpression ASSIGNMENT
  102                | directlyAssignableExpression assignmentAndOperator

  103 assignableSuffix: indexingSuffix
  104                 | typeArguments

  105 typeArguments: LANGLE typeProjection multi_comma_typeProjection opt_comma RANGLE

  106 multi_comma_typeProjection: multi_comma_typeProjection COMMA typeProjection

  107 $@6: ε

  108 multi_comma_typeProjection: $@6

  109 typeProjection: type
  110               | MULT

  111 directlyAssignableExpression: postfixUnaryExpression assignableSuffix
  112                             | simpleIdentifier assignableSuffix
  113                             | simpleIdentifier
  114                             | parenthesizedDirectlyAssignableExpression

  115 parenthesizedDirectlyAssignableExpression: LPAREN assignableExpression RPAREN

  116 multi_postfixUnarySuffix: multi_postfixUnarySuffix postfixUnarySuffix

  117 $@7: ε

  118 multi_postfixUnarySuffix: $@7

  119 postfixUnaryExpression: primaryExpression multi_postfixUnarySuffix

  120 postfixUnarySuffix: postfixUnaryOperator
  121                   | indexingSuffix
  122                   | callSuffix
  123                   | navigationSuffix

  124 identifier_expression_class: simpleIdentifier
  125                            | parenthesizedExpression
  126                            | CLASS

  127 navigationSuffix: memberAccessOperator identifier_expression_class

  128 memberAccessOperator: DOT
  129                     | QUEST_NO_WS DOT

  130 postfixUnaryOperator: INCR
  131                     | DECR
  132                     | EXCL_NO_WS EXCL_NO_WS

  133 multi_comma_expression: multi_comma_expression COMMA expression

  134 $@8: ε

  135 multi_comma_expression: $@8

  136 indexingSuffix: LSQUARE expression multi_comma_expression opt_comma RSQUARE

  137 callSuffix: valueArguments

  138 multi_comma_valueArgument: multi_comma_valueArgument COMMA valueArgument

  139 $@9: ε

  140 multi_comma_valueArgument: $@9

  141 opt_valueArgument: valueArgument multi_comma_valueArgument opt_comma

  142 $@10: ε

  143 opt_valueArgument: $@10

  144 valueArguments: LPAREN opt_valueArgument RPAREN

  145 opt_simpleIdentifier_EQ: simpleIdentifier ASSIGNMENT

  146 $@11: ε

  147 opt_simpleIdentifier_EQ: $@11

  148 opt_Multi: MULT

  149 $@12: ε

  150 opt_Multi: $@12

  151 valueArgument: opt_simpleIdentifier_EQ opt_Multi expression

  152 parenthesizedExpression: LPAREN expression RPAREN

  153 ifExpression: IF LPAREN expression RPAREN opt_else

  154 opt_else: controlStructureBody
  155         | SEMICOLON
  156         | controlStructureBody SEMICOLON ELSE ifElseTail
  157         | controlStructureBody ELSE ifElseTail

  158 ifElseTail: controlStructureBody
  159           | SEMICOLON

  160 functionCall: IDENTIFIER LPAREN functionArguments RPAREN semis
  161             | dotExpression LPAREN functionArguments RPAREN semis

  162 dotExpression: IDENTIFIER DOT IDENTIFIER
  163              | dotExpression DOT IDENTIFIER

  164 functionArguments: expression
  165                  | functionArguments COMMA expression
  166                  | ε

  167 variable_multivariable: variableDeclaration
  168                       | multiVariableDeclaration

  169 control_structure_body_or_comma: controlStructureBody
  170                                | COMMA

  171 loopStatement: whileStatement
  172              | forStatement
  173              | doWhileStatement

  174 whileStatement: WHILE LPAREN expression RPAREN control_structure_body_or_comma

  175 forStatement: FOR LPAREN variable_multivariable IN expression RPAREN controlStructureBody

  176 doWhileStatement: DO controlStructureBody WHILE LPAREN expression RPAREN

  177 controlStructureBody: block
  178                     | statement

  179 jumpExpression: RETURN expression
  180               | RETURN
  181               | CONTINUE
  182               | BREAK

  183 multi_whenEntry: multi_whenEntry whenEntry
  184                | ε

  185 whenExpression: WHEN whenSubject LCURL multi_whenEntry RCURL
  186               | WHEN LCURL multi_whenEntry RCURL

  187 whenSubject: LPAREN expression RPAREN
  188            | LPAREN VAL variableDeclaration ASSIGNMENT expression RPAREN

  189 multi_comma_whenCondition: multi_comma_whenCondition COMMA whenCondition

  190 $@13: ε

  191 multi_comma_whenCondition: $@13

  192 whenEntry: whenCondition multi_comma_whenCondition ARROW controlStructureBody
  193          | whenCondition multi_comma_whenCondition COMMA ARROW controlStructureBody
  194          | ELSE ARROW controlStructureBody SEMICOLON
  195          | ELSE ARROW controlStructureBody

  196 whenCondition: expression
  197              | rangeTest

  198 rangeTest: IN expression

  199 classMembers: ε
  200             | classMembers classMember

  201 classMember: functionDeclaration
  202            | variableDeclaration

  203 expression: disjunction

  204 disjunction: conjunction
  205            | disjunction DISJ conjunction

  206 conjunction: equality
  207            | conjunction CONJ equality

  208 equality: comparison
  209         | equality equality_operator comparison

  210 comparison: genericCallLikeComparison
  211           | comparison LANGLE genericCallLikeComparison
  212           | comparison comparison_operator genericCallLikeComparison

  213 genericCallLikeComparison: elvisExpression
  214                          | genericCallLikeComparison IN elvisExpression

  215 elvisExpression: rangeExpression
  216                | elvisExpression QUEST_COLON rangeExpression

  217 rangeExpression: additiveExpression
  218                | rangeExpression RANGE additiveExpression

  219 additiveExpression: multiplicativeExpression
  220                   | additiveExpression ADD multiplicativeExpression
  221                   | additiveExpression SUB multiplicativeExpression

  222 multiplicativeExpression: postfixUnaryExpression
  223                         | multiplicativeExpression MULT postfixUnaryExpression
  224                         | multiplicativeExpression DIV postfixUnaryExpression
  225                         | multiplicativeExpression MOD postfixUnaryExpression

  226 primaryExpression: parenthesizedExpression
  227                  | simpleIdentifier
  228                  | functionCall
  229                  | INTEGER_LITERAL
  230                  | STRING_LITERAL
  231                  | BOOLEAN_LITERAL
  232                  | FLOAT_LITERAL
  233                  | DOUBLE_LITERAL
  234                  | NULL_LITERAL
  235                  | arrayExpression
  236                  | CHARACTER_LITERAL
  237                  | jumpExpression
  238                  | collectionLiteral
  239                  | ifExpression
  240                  | whenExpression

  241 typeLiteral: INTEGER_LITERAL
  242            | STRING_LITERAL
  243            | BOOLEAN_LITERAL
  244            | FLOAT_LITERAL
  245            | DOUBLE_LITERAL
  246            | CHARACTER_LITERAL

  247 arrayExpression: arrayType LPAREN INTEGER_LITERAL RPAREN LCURL typeLiteral RCURL

  248 collectionLiteral: LSQUARE RSQUARE
  249                  | LSQUARE expression COMMA RSQUARE
  250                  | LSQUARE expression RSQUARE
  251                  | LSQUARE expression multi_comma_expression RSQUARE
  252                  | LSQUARE expression multi_comma_expression COMMA RSQUARE

  253 comparison_operator: RANGLE
  254                    | LE
  255                    | GE

  256 equality_operator: EQEQ
  257                  | EQEQEQ
  258                  | EXCL_EQ
  259                  | EXCL_EQEQ


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    RESERVED <treeptr> (258)
    DOT <treeptr> (259) 9 43 63 128 129 162 163
    COMMA <treeptr> (260) 14 16 68 72 80 106 133 138 165 170 189 193 249 252
    LPAREN <treeptr> (261) 11 42 79 99 115 144 152 153 160 161 174 175 176 187 188 247
    RPAREN <treeptr> (262) 11 42 79 99 115 144 152 153 160 161 174 175 176 187 188 247
    LSQUARE <treeptr> (263) 136 248 249 250 251 252
    RSQUARE <treeptr> (264) 136 248 249 250 251 252
    LCURL <treeptr> (265) 22 82 185 186 247
    RCURL <treeptr> (266) 22 82 185 186 247
    INCR <treeptr> (267) 95 130
    DECR <treeptr> (268) 96 131
    CONJ <treeptr> (269) 207
    DISJ <treeptr> (270) 205
    EXCL_WS <treeptr> (271)
    EXCL_NO_WS <treeptr> (272) 97 132
    COLON <treeptr> (273) 7 13 77
    SEMICOLON <treeptr> (274) 21 23 63 64 155 156 159 194
    ASSIGNMENT <treeptr> (275) 21 58 101 145 188
    ADD_ASSIGNMENT <treeptr> (276) 83
    SUB_ASSIGNMENT <treeptr> (277) 84
    MULT_ASSIGNMENT <treeptr> (278) 85
    DIV_ASSIGNMENT <treeptr> (279) 86
    MOD_ASSIGNMENT <treeptr> (280) 87
    ARROW <treeptr> (281) 192 193 194 195
    DOUBLE_ARROW <treeptr> (282)
    RANGE <treeptr> (283) 218
    COLONCOLON <treeptr> (284)
    DOUBLE_SEMICOLON <treeptr> (285)
    HASH <treeptr> (286)
    AT_NO_WS <treeptr> (287)
    AT_POST_WS <treeptr> (288)
    AT_PRE_WS <treeptr> (289)
    AT_BOTH_WS <treeptr> (290)
    QUEST_WS <treeptr> (291)
    QUEST_NO_WS <treeptr> (292) 49 129
    LANGLE <treeptr> (293) 70 105 211
    RANGLE <treeptr> (294) 70 105 253
    LE <treeptr> (295) 254
    GE <treeptr> (296) 255
    QUEST_DOT <treeptr> (297)
    EXCL_EQ <treeptr> (298) 258
    EXCL_EQEQ <treeptr> (299) 259
    AS_SAFE <treeptr> (300)
    EQEQ <treeptr> (301) 256
    EQEQEQ <treeptr> (302) 257
    SINGLE_QUOTE <treeptr> (303)
    RETURN_AT <treeptr> (304)
    CONTINUE_AT <treeptr> (305)
    BREAK_AT <treeptr> (306)
    THIS_AT <treeptr> (307)
    SUPER_AT <treeptr> (308)
    FILES <treeptr> (309)
    FIELD <treeptr> (310)
    PROPERTY <treeptr> (311)
    GET <treeptr> (312)
    QUEST_COLON <treeptr> (313) 216
    SET <treeptr> (314)
    RECEIVER <treeptr> (315)
    PARAM <treeptr> (316)
    SETPARAM <treeptr> (317)
    DELEGATE <treeptr> (318)
    PACKAGE <treeptr> (319)
    IMPORT <treeptr> (320)
    CLASS <treeptr> (321) 75 76 126
    INTERFACE <treeptr> (322)
    FUN <treeptr> (323) 9 10
    OBJECT <treeptr> (324)
    VAL <treeptr> (325) 38 188
    VAR <treeptr> (326) 37
    TYPEALIAS <treeptr> (327)
    CONSTRUCTOR <treeptr> (328)
    BY <treeptr> (329)
    COMPANION <treeptr> (330)
    INIT <treeptr> (331)
    THIS <treeptr> (332)
    SUPER <treeptr> (333)
    TYPEOF <treeptr> (334)
    WHERE <treeptr> (335)
    IF <treeptr> (336) 153
    ELSE <treeptr> (337) 156 157 194 195
    WHEN <treeptr> (338) 185 186
    TRY <treeptr> (339)
    CATCH <treeptr> (340)
    FINALLY <treeptr> (341)
    FOR <treeptr> (342) 175
    DO <treeptr> (343) 176
    WHILE <treeptr> (344) 174 176
    THROW <treeptr> (345)
    RETURN <treeptr> (346) 179 180
    CONTINUE <treeptr> (347) 181
    BREAK <treeptr> (348) 182
    AS <treeptr> (349)
    IS <treeptr> (350)
    IN <treeptr> (351) 175 198 214
    OUT <treeptr> (352)
    DYNAMIC <treeptr> (353)
    PUBLIC <treeptr> (354)
    PRIVATE <treeptr> (355)
    PROTECTED <treeptr> (356)
    INTERNAL <treeptr> (357)
    ENUM <treeptr> (358)
    SEALED <treeptr> (359)
    ANNOTATION <treeptr> (360)
    DATA <treeptr> (361)
    INNER <treeptr> (362)
    TAILREC <treeptr> (363)
    OPERATOR <treeptr> (364)
    INLINE <treeptr> (365)
    INFIX <treeptr> (366)
    EXTERNAL <treeptr> (367)
    SUSPEND <treeptr> (368)
    OVERRIDE <treeptr> (369)
    ABSTRACT <treeptr> (370)
    NULL_LITERAL <treeptr> (371) 234
    FINAL <treeptr> (372)
    OPEN <treeptr> (373)
    CONST <treeptr> (374) 39 75
    LATEINIT <treeptr> (375)
    VARARG <treeptr> (376)
    NOINLINE <treeptr> (377)
    CROSSINLINE <treeptr> (378)
    REIFIED <treeptr> (379)
    EXPECT <treeptr> (380)
    ACTUAL <treeptr> (381)
    REAL_LITERAL <treeptr> (382)
    FLOAT_LITERAL <treeptr> (383) 232 244
    DOUBLE_LITERAL <treeptr> (384) 233 245
    INTEGER_LITERAL <treeptr> (385) 229 241 247
    CHARACTER_LITERAL <treeptr> (386) 236 246
    HEX_LITERAL <treeptr> (387)
    BIN_LITERAL <treeptr> (388)
    UNSIGNED_LITERAL <treeptr> (389)
    LONG_LITERAL <treeptr> (390)
    BOOLEAN_LITERAL <treeptr> (391) 231 243
    STRING_LITERAL <treeptr> (392) 230 242
    INT <treeptr> (393)
    FLOAT <treeptr> (394)
    BOOLEAN <treeptr> (395)
    CHAR <treeptr> (396)
    STRING <treeptr> (397)
    BYTE <treeptr> (398)
    T_EOF <treeptr> (399)
    TYPELITERAL <treeptr> (400) 53
    MULT <treeptr> (401) 110 148 223
    MOD <treeptr> (402) 225
    DIV <treeptr> (403) 224
    ADD <treeptr> (404) 93 220
    SUB <treeptr> (405) 94 221
    ARRAYTYPELITERAL <treeptr> (406) 55
    IDENTIFIER <treeptr> (407) 74 160 162 163
    EQUALITY_OP (408)
    COMPARISON_OP (409)
    TYPE_ARGUMENT (410)
    prefixUnaryOp (411)
    LOWER_THAN_ELSE (412)


Nonterminals, with rules where they appear

    $accept (158)
        on left: 0
    program <treeptr> (159)
        on left: 1
        on right: 0
    topLevelObjects <treeptr> (160)
        on left: 2 3
        on right: 1 3
    topLevelObject <treeptr> (161)
        on left: 4
        on right: 2 3
    opt_functionBody <treeptr> (162)
        on left: 5 6
        on right: 9 10
    opt_colon_type <treeptr> (163)
        on left: 7 8
        on right: 9 10
    functionDeclaration <treeptr> (164)
        on left: 9 10
        on right: 35 201
    functionValueParameters <treeptr> (165)
        on left: 11
        on right: 9 10
    functionValueParameter <treeptr> (166)
        on left: 12
        on right: 14 16 17
    parameter <treeptr> (167)
        on left: 13
        on right: 12
    multi_comma_functionParameter <treeptr> (168)
        on left: 14 15
        on right: 14 16 17
    opt_functionValueParameter <treeptr> (169)
        on left: 16 17 18
        on right: 11
    type <treeptr> (170)
        on left: 19
        on right: 7 13 42 77 78 109
    functionBody <treeptr> (171)
        on left: 20 21
        on right: 5
    block <treeptr> (172)
        on left: 22
        on right: 20 177
    semis <treeptr> (173)
        on left: 23 24
        on right: 4 25 30 31 32 33 160 161
    semis_statement <treeptr> (174)
        on left: 25 26
        on right: 25 27
    optional_statement_sequence <treeptr> (175)
        on left: 27 28
        on right: 29
    statements <treeptr> (176)
        on left: 29
        on right: 22
    statement <treeptr> (177)
        on left: 30 31 32 33
        on right: 25 27 178
    declaration <treeptr> (178)
        on left: 34 35 36
        on right: 4 30
    val_var <treeptr> (179)
        on left: 37 38
        on right: 63 64 65
    opt_modifier <treeptr> (180)
        on left: 39 41
        on right: 63 64 65
    $@1 (181)
        on left: 40
        on right: 41
    parenthesizedType <treeptr> (182)
        on left: 42
        on right: 56
    multi_dot_simpleUserType <treeptr> (183)
        on left: 43 45
        on right: 43 46
    $@2 (184)
        on left: 44
        on right: 45
    userType <treeptr> (185)
        on left: 46
        on right: 57
    simpleUserType <treeptr> (186)
        on left: 47 48
        on right: 43 46
    multi_quest <treeptr> (187)
        on left: 49 51
        on right: 49 52 53
    $@3 (188)
        on left: 50
        on right: 51
    nullableType <treeptr> (189)
        on left: 52 53 54
        on right: 9 19 63
    arrayType <treeptr> (190)
        on left: 55
        on right: 54 247
    typeRef_parenthesizedType <treeptr> (191)
        on left: 56 57
        on right: 52
    opt_eq_exp <treeptr> (192)
        on left: 58 60
        on right: 12 63 64 65
    $@4 (193)
        on left: 59
        on right: 60
    multivariable_variableDeclaration <treeptr> (194)
        on left: 61 62
        on right: 63 64 65
    propertyDeclaration <treeptr> (195)
        on left: 63 64 65
        on right: 36
    opt_typeParameters <treeptr> (196)
        on left: 66 67
        on right: 9 10 63 64 65 75 76
    opt_comma <treeptr> (197)
        on left: 68 69
        on right: 70 79 105 136 141
    typeParameters <treeptr> (198)
        on left: 70
        on right: 66
    typeParameter <treeptr> (199)
        on left: 71
        on right: 70 72
    multi_typeParameter <treeptr> (200)
        on left: 72 73
        on right: 70 72
    simpleIdentifier <treeptr> (201)
        on left: 74
        on right: 9 10 13 47 48 71 75 76 112 113 124 145 227
    classDeclaration <treeptr> (202)
        on left: 75 76
        on right: 34
    variableDeclaration <treeptr> (203)
        on left: 77 78
        on right: 61 79 80 167 188 202
    multiVariableDeclaration <treeptr> (204)
        on left: 79
        on right: 62 168
    multi_comma_variableDeclaration <treeptr> (205)
        on left: 80 81
        on right: 79 80
    classBody <treeptr> (206)
        on left: 82
        on right: 75 76
    assignmentAndOperator <treeptr> (207)
        on left: 83 84 85 86 87
        on right: 102
    assignableExpression <treeptr> (208)
        on left: 88 89
        on right: 99 115
    multi_unaryPrefix <treeptr> (209)
        on left: 90 92
        on right: 90 98
    $@5 (210)
        on left: 91
        on right: 92
    prefixUnaryOperator <treeptr> (211)
        on left: 93 94 95 96 97
        on right: 90
    prefixUnaryExpression <treeptr> (212)
        on left: 98
        on right: 88
    parenthesizedAssignableExpression <treeptr> (213)
        on left: 99
        on right: 89
    assignment <treeptr> (214)
        on left: 100
        on right: 31
    directly_assign <treeptr> (215)
        on left: 101 102
        on right: 100
    assignableSuffix <treeptr> (216)
        on left: 103 104
        on right: 111 112
    typeArguments <treeptr> (217)
        on left: 105
        on right: 47 55 104
    multi_comma_typeProjection <treeptr> (218)
        on left: 106 108
        on right: 105 106
    $@6 (219)
        on left: 107
        on right: 108
    typeProjection <treeptr> (220)
        on left: 109 110
        on right: 105 106
    directlyAssignableExpression <treeptr> (221)
        on left: 111 112 113 114
        on right: 101 102
    parenthesizedDirectlyAssignableExpression <treeptr> (222)
        on left: 115
        on right: 114
    multi_postfixUnarySuffix <treeptr> (223)
        on left: 116 118
        on right: 116 119
    $@7 (224)
        on left: 117
        on right: 118
    postfixUnaryExpression <treeptr> (225)
        on left: 119
        on right: 98 111 222 223 224 225
    postfixUnarySuffix <treeptr> (226)
        on left: 120 121 122 123
        on right: 116
    identifier_expression_class <treeptr> (227)
        on left: 124 125 126
        on right: 127
    navigationSuffix <treeptr> (228)
        on left: 127
        on right: 123
    memberAccessOperator <treeptr> (229)
        on left: 128 129
        on right: 127
    postfixUnaryOperator <treeptr> (230)
        on left: 130 131 132
        on right: 120
    multi_comma_expression <treeptr> (231)
        on left: 133 135
        on right: 133 136 251 252
    $@8 (232)
        on left: 134
        on right: 135
    indexingSuffix <treeptr> (233)
        on left: 136
        on right: 103 121
    callSuffix <treeptr> (234)
        on left: 137
        on right: 122
    multi_comma_valueArgument <treeptr> (235)
        on left: 138 140
        on right: 138 141
    $@9 (236)
        on left: 139
        on right: 140
    opt_valueArgument <treeptr> (237)
        on left: 141 143
        on right: 144
    $@10 (238)
        on left: 142
        on right: 143
    valueArguments <treeptr> (239)
        on left: 144
        on right: 137
    opt_simpleIdentifier_EQ <treeptr> (240)
        on left: 145 147
        on right: 151
    $@11 (241)
        on left: 146
        on right: 147
    opt_Multi <treeptr> (242)
        on left: 148 150
        on right: 151
    $@12 (243)
        on left: 149
        on right: 150
    valueArgument <treeptr> (244)
        on left: 151
        on right: 138 141
    parenthesizedExpression <treeptr> (245)
        on left: 152
        on right: 125 226
    ifExpression <treeptr> (246)
        on left: 153
        on right: 239
    opt_else <treeptr> (247)
        on left: 154 155 156 157
        on right: 153
    ifElseTail <treeptr> (248)
        on left: 158 159
        on right: 156 157
    functionCall <treeptr> (249)
        on left: 160 161
        on right: 228
    dotExpression <treeptr> (250)
        on left: 162 163
        on right: 161 163
    functionArguments <treeptr> (251)
        on left: 164 165 166
        on right: 160 161 165
    variable_multivariable <treeptr> (252)
        on left: 167 168
        on right: 175
    control_structure_body_or_comma <treeptr> (253)
        on left: 169 170
        on right: 174
    loopStatement <treeptr> (254)
        on left: 171 172 173
        on right: 33
    whileStatement <treeptr> (255)
        on left: 174
        on right: 171
    forStatement <treeptr> (256)
        on left: 175
        on right: 172
    doWhileStatement <treeptr> (257)
        on left: 176
        on right: 173
    controlStructureBody <treeptr> (258)
        on left: 177 178
        on right: 154 156 157 158 169 175 176 192 193 194 195
    jumpExpression <treeptr> (259)
        on left: 179 180 181 182
        on right: 237
    multi_whenEntry <treeptr> (260)
        on left: 183 184
        on right: 183 185 186
    whenExpression <treeptr> (261)
        on left: 185 186
        on right: 240
    whenSubject <treeptr> (262)
        on left: 187 188
        on right: 185
    multi_comma_whenCondition <treeptr> (263)
        on left: 189 191
        on right: 189 192 193
    $@13 (264)
        on left: 190
        on right: 191
    whenEntry <treeptr> (265)
        on left: 192 193 194 195
        on right: 183
    whenCondition <treeptr> (266)
        on left: 196 197
        on right: 189 192 193
    rangeTest <treeptr> (267)
        on left: 198
        on right: 197
    classMembers <treeptr> (268)
        on left: 199 200
        on right: 82 200
    classMember <treeptr> (269)
        on left: 201 202
        on right: 200
    expression <treeptr> (270)
        on left: 203
        on right: 21 32 58 100 133 136 151 152 153 164 165 174 175 176 179 187 188 196 198 249 250 251 252
    disjunction <treeptr> (271)
        on left: 204 205
        on right: 203 205
    conjunction <treeptr> (272)
        on left: 206 207
        on right: 204 205 207
    equality <treeptr> (273)
        on left: 208 209
        on right: 206 207 209
    comparison <treeptr> (274)
        on left: 210 211 212
        on right: 208 209 211 212
    genericCallLikeComparison <treeptr> (275)
        on left: 213 214
        on right: 210 211 212 214
    elvisExpression <treeptr> (276)
        on left: 215 216
        on right: 213 214 216
    rangeExpression <treeptr> (277)
        on left: 217 218
        on right: 215 216 218
    additiveExpression <treeptr> (278)
        on left: 219 220 221
        on right: 217 218 220 221
    multiplicativeExpression <treeptr> (279)
        on left: 222 223 224 225
        on right: 219 220 221 223 224 225
    primaryExpression <treeptr> (280)
        on left: 226 227 228 229 230 231 232 233 234 235 236 237 238 239 240
        on right: 119
    typeLiteral <treeptr> (281)
        on left: 241 242 243 244 245 246
        on right: 247
    arrayExpression <treeptr> (282)
        on left: 247
        on right: 235
    collectionLiteral <treeptr> (283)
        on left: 248 249 250 251 252
        on right: 238
    comparison_operator <treeptr> (284)
        on left: 253 254 255
        on right: 212
    equality_operator <treeptr> (285)
        on left: 256 257 258 259
        on right: 209


State 0

    0 $accept: • program $end

    CLASS  shift, and go to state 1
    FUN    shift, and go to state 2
    CONST  shift, and go to state 3

    $default  reduce using rule 40 ($@1)

    program              go to state 4
    topLevelObjects      go to state 5
    topLevelObject       go to state 6
    functionDeclaration  go to state 7
    declaration          go to state 8
    opt_modifier         go to state 9
    $@1                  go to state 10
    propertyDeclaration  go to state 11
    classDeclaration     go to state 12


State 1

   76 classDeclaration: CLASS • simpleIdentifier opt_typeParameters classBody

    IDENTIFIER  shift, and go to state 13

    simpleIdentifier  go to state 14


State 2

    9 functionDeclaration: FUN • opt_typeParameters nullableType DOT simpleIdentifier functionValueParameters opt_colon_type opt_functionBody
   10                    | FUN • opt_typeParameters simpleIdentifier functionValueParameters opt_colon_type opt_functionBody

    LANGLE  shift, and go to state 15

    $default  reduce using rule 67 (opt_typeParameters)

    opt_typeParameters  go to state 16
    typeParameters      go to state 17


State 3

   39 opt_modifier: CONST •
   75 classDeclaration: CONST • CLASS simpleIdentifier opt_typeParameters classBody

    CLASS  shift, and go to state 18

    $default  reduce using rule 39 (opt_modifier)


State 4

    0 $accept: program • $end

    $end  shift, and go to state 19


State 5
